Attempted fix for background image on mobile devices

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -330,6 +330,8 @@ footer{
   margin: 0;
 }
 
+/* For mobile responsiveness */
+
 @media (width <= 1000px) {
   .typewritter-effect{
     font-size: 16px;
@@ -403,6 +405,13 @@ footer{
   }
   .nav-divider{
     font-size: 9px;
+  }
+  body{
+    background-image:
+    linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(174, 174, 174, 0.1), rgba(174, 174, 174, 0.1),
+     rgb(124, 193, 101)), url("./images/KeyboardBackground.jpg");
+    background-size: cover;
+    background-attachment: fixed;
   }
 }
 
@@ -536,6 +545,13 @@ footer{
   }
   .nav-divider{
     font-size: 10px;
+  }
+  body{
+    background-image:
+    linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(174, 174, 174, 0.1), rgba(174, 174, 174, 0.1),
+     rgb(124, 193, 101)), url("./images/KeyboardBackground.jpg");
+    background-size: cover;
+    background-attachment: fixed;
   }
 }
 
